--- a/detection-rules/fraud_prize_gift_scam_free_host.yml
+++ b/detection-rules/fraud_prize_gift_scam_free_host.yml
@@ -67,3 +67,5 @@ detection_methods:
   - "Natural Language Understanding"
   - "Sender analysis"
   - "URL analysis"
+authors: {name: "Julian Wayte"}
+
