--- a/detection-rules/fraud_prize_gift_scam_free_host.yml
+++ b/detection-rules/fraud_prize_gift_scam_free_host.yml
@@ -67,5 +67,6 @@ detection_methods:
   - "Natural Language Understanding"
   - "Sender analysis"
   - "URL analysis"
-authors: {name: "Julian Wayte"}
+authors: 
+  - name: "Julian Wayte"
 
